<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.password_reset_flow.PasswordResetFlowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/recovery_selection_page_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_back_arrow"/>

        <TextView
            android:id="@+id/recovery_selection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_selection_text"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_bold"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/recovery_selection_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_selection_detail"
            android:fontFamily="@font/muli"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@color/lite_white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/recovery_selection_mobile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mobile_icon"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/recovery_selection_mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery_selection_via_sms"
                android:textSize="20sp"
                android:fontFamily="@font/muli_bold"
                android:layout_toRightOf="@+id/recovery_selection_mobile_icon"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/recovery_selection_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery_selection_sms_number"
                android:textSize="20sp"
                android:fontFamily="@font/muli_bold"
                android:layout_toRightOf="@+id/recovery_selection_mobile_icon"
                android:layout_below="@+id/recovery_selection_mobile_title" />

            <Button
                android:id="@+id/recovery_selection_mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:background="@color/lite_white"
            android:padding="10dp">

            <ImageView
                android:id="@+id/recovery_selection_email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email_icon"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/recovery_selection_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery_selection_via_email"
                android:textSize="20sp"
                android:fontFamily="@font/muli_bold"
                android:layout_toRightOf="@+id/recovery_selection_email_icon"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/recovery_selection_email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovery_selection_email_address"
                android:textSize="20sp"
                android:fontFamily="@font/muli_bold"
                android:layout_toRightOf="@+id/recovery_selection_email_icon"
                android:layout_below="@+id/recovery_selection_email_title" />


            <Button
                android:id="@+id/recovery_selection_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>