<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.password_reset_flow.PasswordResetFlowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/new_credential_page_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_back_arrow"/>


        <ImageView
            android:id="@+id/new_credential_page_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_new_credential_icon"/>

        <TextView
            android:id="@+id/new_credential_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credential_text"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_bold"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/new_credential_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_credential_detail"
            android:fontFamily="@font/muli"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:background="#00000000"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidthFocused="2dp"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:background="#00000000"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rounded_corner"
            android:textColor="@color/white"
            android:text="@string/new_credential_btn_text_ok" />

    </LinearLayout>

</ScrollView>