<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ui.password_reset_flow.PasswordResetFlowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/forgot_password_page_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_back_arrow"/>


        <ImageView
            android:id="@+id/forgot_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_forgot_password"/>


        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textColor="@color/black"
            android:fontFamily="@font/muli_bold"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/forgot_password_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_detail"
            android:fontFamily="@font/muli"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:boxBackgroundColor="@color/lite_white"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/forgot_password_enter_email"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/black"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:background="#00000000"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_rounded_corner"
            android:textColor="@color/white"
            android:text="@string/forgot_password_btn_next" />

    </LinearLayout>

</ScrollView>